[gd_scene load_steps=11 format=2]

[ext_resource path="res://ASSETS/fonts/arrow2.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/fonts/arrow1.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/fonts/new_theme.tres" type="Theme" id=3]
[ext_resource path="res://ASSETS/fonts/Alkalami-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Levels/Level1.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.254902 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
size = 60
outline_color = Color( 0.388235, 0.388235, 0.388235, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 46
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 8.0
margin_right = 1286.0
margin_bottom = 799.0
color = Color( 0.596078, 0.796078, 0.937255, 1 )

[node name="Levels" type="Label" parent="."]
margin_left = 128.0
margin_top = 88.0
margin_right = 250.0
margin_bottom = 165.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Levels:"

[node name="coinscollected" type="Label" parent="."]
margin_left = 832.0
margin_top = 88.0
margin_right = 1151.0
margin_bottom = 165.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "collectibles found:"
align = 1

[node name="Panel_level" type="Panel" parent="."]
margin_left = 128.0
margin_top = 152.0
margin_right = 1150.0
margin_bottom = 247.0
custom_styles/panel = SubResource( 3 )

[node name="level1" type="Label" parent="Panel_level"]
margin_left = 32.0
margin_right = 222.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 95, 58 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Level 1"

[node name="coins" type="Label" parent="Panel_level"]
margin_left = 784.0
margin_top = 16.0
margin_right = 1029.0
margin_bottom = 93.0
custom_colors/font_color = Color( 0.407843, 0.12549, 0.054902, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="Panel_levels" type="Panel" parent="."]
margin_left = 128.0
margin_top = 264.0
margin_right = 1152.0
margin_bottom = 486.0
custom_styles/panel = SubResource( 3 )

[node name="level_1" type="LinkButton" parent="Panel_levels"]
margin_left = 32.0
margin_top = 16.0
margin_right = 681.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 95, 58 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "Tutorial (The age of dinosaurs)"
underline = 2

[node name="level_2" type="LinkButton" parent="Panel_levels"]
margin_left = 32.0
margin_top = 120.0
margin_right = 681.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 95, 58 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
disabled = true
text = "Level 1 (The age of the cavemen)"
underline = 2

[node name="level_3" type="LinkButton" parent="Panel_levels"]
margin_left = 32.0
margin_top = 344.0
margin_right = 32.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 95, 58 )
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
disabled = true
underline = 2

[node name="coins" type="Label" parent="Panel_levels"]
margin_left = 784.0
margin_top = 24.0
margin_right = 1029.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 123, 39 )
custom_colors/font_color = Color( 0.407843, 0.12549, 0.054902, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="coins2" type="Label" parent="Panel_levels"]
margin_left = 784.0
margin_top = 120.0
margin_right = 1029.0
margin_bottom = 197.0
rect_pivot_offset = Vector2( 123, 39 )
custom_colors/font_color = Color( 0.407843, 0.12549, 0.054902, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="Back" type="TextureButton" parent="."]
margin_left = 1173.0
margin_top = 659.0
margin_right = 1247.0
margin_bottom = 755.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
expand = true

[connection signal="pressed" from="Panel_levels/level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Panel_levels/level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
